--- a/Biocell/credentials.html
+++ b/Biocell/credentials.html
@@ -375,7 +375,7 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
       <div class="page-content">
 
          		<!--banner-->
-		<div class="dz-bnr-inr bg-secondary  dz-bnr-inr-md" style="background-image:url(image/channel-partner-banner.png);">
+		<div class="dz-bnr-inr bg-secondary  dz-bnr-inr-md" style="background-image:url(image/lab/lab\ \(6\).jpg);">
 			<div class="container">
 				<div class="dz-bnr-inr-entry d-table-cell">
 					<h1>Certifications and Documents</h1>
