--- a/Biocell/video-gallery.html
+++ b/Biocell/video-gallery.html
@@ -295,10 +295,10 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 		<!-- Header End -->
 	
 	<div class="page-content">
-		<!--Banner Start-->
-		<div class="dz-bnr-inr" style="background-image:url(image/breadcrumb-banner.jpg);">
+		<div class="dz-bnr-inr bg-secondary  dz-bnr-inr-sm" style="background-image:url(image/lab/lab\ \(24\).jpg);">
 			<div class="container">
 				<div class="dz-bnr-inr-entry">
+					<h1>Video Gallery</h1>
 					<nav aria-label="breadcrumb" class="breadcrumb-row">
 						<ul class="breadcrumb">
 							<li class="breadcrumb-item"><a href="index.html"> Home</a></li>
@@ -306,172 +306,44 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 						</ul>
 					</nav>
 				</div>
-			</div>	
+			</div>
 		</div>
 		<!--Banner End-->
 		
 		<section class="content-inner pt-0 z-index-unset">
 			<div class="site-filters style-2 clearfix center">
 			</div>
+
 			<div class="container">
 				<div class="clearfix">
-					<ul id="masonry" class="lightgallery row" data-column-width="10">
-						<li class="card-container col-xl-6 col-lg-6 col-md-12 col-sm-12 m-b30 All">
-							<div class="portfolio-box style-2">
-								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio4/pic1.jpg" alt="/">
-									</a>
-								</div>
-								<div class="dz-content">
-									<div class="product-tag">
-										<a href="portfolio-details-1.html">
-											<span class="badge">Plant</span>	
-										</a>
-									</div>
-									<h2 class="title"><a href="portfolio-details-1.html">Plant Life: Essential Insights</a></h2>
-								</div>
-							</div>
-						</li>
-						<li class="card-container col-xl-6 col-lg-6 col-md-12 col-sm-12 m-b30  All small-plants">
-							<div class="portfolio-box style-2">
-								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio4/pic2.jpg" alt="/">
-									</a>
-								</div>
-								<div class="dz-content">
-									<div class="product-tag">
-										<a href="portfolio-details-1.html">
-											<span class="badge">Plant</span>
-										</a>
-									</div>
-									<h2 class="title"><a href="portfolio-details-2.html">Botanical World: Exploring Nature</a></h2>
-								</div>
-							</div>
-						</li>
-						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 order-lg-3 order-4 All house-plants">
-							<div class="portfolio-box style-2">
-								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio4/pic3.jpg" alt="/">
-									</a>
-								</div>
-								<div class="dz-content w-100">
-									<div class="product-tag">
-										<a href="portfolio-details-1.html">
-											<span class="badge">Plant</span>
-										</a>
-									</div>
-									<h2 class="title"><a href="portfolio-details-3.html">Green Kingdom: Nature's Beauty</a></h2>
-								</div>
-							</div>
-						</li>
-						<li class="card-container col-xl-6 col-lg-6 m-b30 All small-plants">
-							<div class="portfolio-box style-2">
-								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio4/pic4.jpg" alt="/">
-									</a>
-								</div>
-								<div class="dz-content">
-									<div class="product-tag">
-										<a href="portfolio-details-1.html">
-											<span class="badge">Plant</span>
-										</a>
-									</div>
-									<h2 class="title"><a href="portfolio-details-4.html">Floral Wonders: Natural Marvels</a></h2>
-								</div>
-							</div>
-						</li>
-						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All  house-plants">
-							<div class="portfolio-box style-2">
-								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio4/pic5.jpg" alt="/">
-									</a>
-								</div>
-								<div class="dz-content w-100">
-									<div class="product-tag">
-										<a href="portfolio-details-1.html">
-											<span class="badge">Plant</span>
-										</a>
-									</div>
-									<h2 class="title"><a href="portfolio-details-5.html">Leafy Realm: Nature's Diversity</a></h2>
-								</div>
-							</div>
-						</li>
-						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All cactus-corner">
-							<div class="portfolio-box style-2">
-								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio4/pic6.jpg" alt="/">
-									</a>
-								</div>
-								<div class="dz-content w-100">
-									<div class="product-tag">
-										<a href="portfolio-details-1.html">
-											<span class="badge">Plant</span>
-										</a>
-									</div>
-									<h2 class="title"><a href="portfolio-details-1.html">Botanic Marvels: Exploring Diversity</a></h2>
-								</div>
-							</div>
-						</li>
-						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All cactus-corner plant-paradise">
-							<div class="portfolio-box style-2">
-								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio4/pic7.jpg" alt="/">
-									</a>
-								</div>
-								<div class="dz-content w-100">
-									<div class="product-tag">
-										<a href="portfolio-details-1.html">
-											<span class="badge">Plant</span>
-										</a>
-									</div>
-									<h2 class="title"><a href="portfolio-details-2.html">Plant Diversity: Nature's Splendor</a></h2>
-								</div>
-							</div>
-						</li>
-						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All cactus-corner plant-paradise ">
-							<div class="portfolio-box style-2">
-								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio4/pic8.jpg" alt="/">
-									</a>
-								</div>
-								<div class="dz-content w-100">
-									<div class="product-tag">
-										<a href="portfolio-details-1.html">
-											<span class="badge">Plant</span>
-										</a>
-									</div>
-									<h2 class="title"><a href="portfolio-details-3.html">Flora Unveiled: Natural Treasures</a></h2>
-								</div>
-							</div>
-						</li>
-						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All fern-fantasy">
-							<div class="portfolio-box style-2">
-								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio4/pic9.jpg" alt="/">
-									</a>
-								</div>
-								<div class="dz-content w-100">
-									<div class="product-tag">
-										<a href="portfolio-details-1.html">
-											<span class="badge">Plant</span>
-										</a>
-									</div>
-									<h2 class="title"><a href="portfolio-details-4.html">Botanical Beauties: Nature's Gifts</a></h2>
-								</div>
-							</div>
-						</li>
-					</ul>		
+				  <ul id="" class="lightgallery row" data-column-width="10">
+					 <li class="card-container col-xl-6 col-lg-6 col-md-12 col-sm-12 m-b30 All">
+						<div class="dz-media">
+							<!-- Embed YouTube video -->
+							<iframe width="100%" height="315" src="https://www.youtube.com/embed/1Uq_7Gm6zQk" frameborder="0" allowfullscreen></iframe>
+						</div>
+					 </li>
+					 <li class="card-container col-xl-6 col-lg-6 col-md-12 col-sm-12 m-b30 All">
+						<div class="dz-media">
+							<iframe width="100%" height="315" src="https://www.youtube.com/embed/SnuYD9_nrD4" frameborder="0" allowfullscreen></iframe>
+						</div>
+					 </li>
+					 <li class="card-container col-xl-6 col-lg-6 col-md-12 col-sm-12 m-b30 All">
+						<div class="dz-media">
+							<iframe width="100%" height="315" src="https://www.youtube.com/embed/Wt7e5YlfL1U" frameborder="0" allowfullscreen></iframe>
+						</div>
+					 </li>
+					 <li class="card-container col-xl-6 col-lg-6 col-md-12 col-sm-12 m-b30 All">
+						<div class="dz-media">
+							<iframe width="100%" height="315" src="https://www.youtube.com/embed/l3-uS8JO8yc" frameborder="0" allowfullscreen></iframe>
+						</div>
+					 </li>
+				  </ul>
 				</div>
-			</div>
+			 </div>
+			 
+			 
+
 
 			<div class="right-text-bar">
             <ul>
