--- a/Biocell/image-gallery.html
+++ b/Biocell/image-gallery.html
@@ -374,10 +374,11 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 		<!-- Header End -->
 	
 	<div class="page-content">
-		<!--Banner Start-->
-		<div class="dz-bnr-inr" style="background-image:url(image/breadcrumb-banner.jpg);">
+		<!--banner-->
+		<div class="dz-bnr-inr bg-secondary  dz-bnr-inr-sm" style="background-image:url(image/lab/lab\ \(24\).jpg);">
 			<div class="container">
 				<div class="dz-bnr-inr-entry">
+					<h1>Image Gallery</h1>
 					<nav aria-label="breadcrumb" class="breadcrumb-row">
 						<ul class="breadcrumb">
 							<li class="breadcrumb-item"><a href="index.html"> Home</a></li>
@@ -385,7 +386,7 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 						</ul>
 					</nav>
 				</div>
-			</div>	
+			</div>
 		</div>
 		<!--Banner End-->
 		
@@ -401,16 +402,16 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 							<div class="portfolio-box style-1">
 								<a href="javascript:void(0);">
 									<div class="dz-media">
-										<img src="image/_MG_3244 (1).jpg" alt="/">
+										<img src="image/image gallery/_MG_2731.JPG" alt="/">
 									</div>
 								</a>
 								<div class="dz-content">
 									<div class="product-tag">
 										<a href="javascript:void(0);">
-											<span class="badge">Plant</span>
+											<span class="badge">Factory</span>
 										</a>
 									</div>
-									<h2 class="title"><a href="javascript:void(0);">Plant Life: Essential Insights</a></h2>
+									<h2 class="title"><a href="javascript:void(0);">Factory Outlook</a></h2>
 								</div>
 							</div>
 						</li>
@@ -418,16 +419,16 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="javascript:void(0);">
-										<img src="image/_MG_3244 (1).jpg" alt="/">
+										<img src="image/image gallery/_MG_3210.JPG" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
 										<a href="javascript:void(0);">
-											<span class="badge">Plant</span>
+											<span class="badge">Production</span>
 										</a>
 									</div>
-									<h2 class="title"><a href="portfolio-details-2.html">Botanical World: Exploring Nature</a></h2>
+									<h2 class="title"><a href="javascript:void(0);">Visiting Medicine Plant</a></h2>
 								</div>
 							</div>
 						</li>
@@ -435,16 +436,16 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="javascript:void(0);">
-										<img src="image/_MG_3244 (1).jpg" alt="/">
+										<img src="image/image gallery/_MG_3219.JPG" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
 										<a href="javascript:void(0);">
-											<span class="badge">Plant</span>
+											<span class="badge">Medicine</span>
 										</a>
 									</div>
-									<h2 class="title"><a href="portfolio-details-3.html">Green Kingdom: Nature's Beauty</a></h2>
+									<h2 class="title"><a href="portfolio-details-3.html">Supervise Medicine Production</a></h2>
 								</div>
 							</div>
 						</li>
@@ -452,16 +453,16 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="javascript:void(0);">
-										<img src="image/_MG_3244 (1).jpg" alt="/">
+										<img src="image/image gallery/_MG_3166.JPG" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
 										<a href="javascript:void(0);">
-											<span class="badge">Plant</span>
+											<span class="badge">Production</span>
 										</a>
 									</div>
-									<h2 class="title"><a href="portfolio-details-4.html">Floral Wonders: Natural Marvels</a></h2>
+									<h2 class="title"><a href="portfolio-details-4.html">Checking Raw Materials</a></h2>
 								</div>
 							</div>
 						</li>
@@ -469,16 +470,16 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="javascript:void(0);">
-										<img src="image/_MG_3244 (1).jpg" alt="/">
+										<img src="image/image gallery/_MG_2967.JPG" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
 										<a href="javascript:void(0);">
-											<span class="badge">Plant</span>
+											<span class="badge">Factory</span>
 										</a>
 									</div>
-									<h2 class="title"><a href="portfolio-details-5.html">Leafy Realm: Nature's Diversity</a></h2>
+									<h2 class="title"><a href="portfolio-details-5.html">Fire Security Measure</a></h2>
 								</div>
 							</div>
 						</li>
@@ -486,33 +487,16 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="javascript:void(0);">
-										<img src="image/_MG_3244 (1).jpg" alt="/">
+										<img src="image/image gallery/_MG_2739.JPG" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
 										<a href="javascript:void(0);">
-											<span class="badge">Plant</span>
+											<span class="badge">Factory</span>
 										</a>
 									</div>
-									<h2 class="title"><a href="javascript:void(0);">Botanic Marvels: Exploring Diversity</a></h2>
-								</div>
-							</div>
-						</li>
-						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All fern-fantasy small-plants">
-							<div class="portfolio-box style-1">
-								<div class="dz-media">
-									<a href="javascript:void(0);">
-										<img src="image/_MG_3244 (1).jpg" alt="/">
-									</a>
-								</div>
-								<div class="dz-content">
-									<div class="product-tag">
-										<a href="javascript:void(0);">
-											<span class="badge">Plant</span>
-										</a>
-									</div>
-									<h2 class="title"><a href="portfolio-details-2.html">Plant Diversity: Nature's Splendor</a></h2>
+									<h2 class="title"><a href="javascript:void(0);">Factory Outlook</a></h2>
 								</div>
 							</div>
 						</li>
@@ -520,33 +504,33 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="javascript:void(0);">
-										<img src="image/_MG_3244 (1).jpg" alt="/">
+										<img src="image/image gallery/_MG_2833.JPG" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
 										<a href="javascript:void(0);">
-											<span class="badge">Plant</span>
+											<span class="badge">Meeting</span>
 										</a>
 									</div>
-									<h2 class="title"><a href="portfolio-details-3.html">Flora Unveiled: Natural Treasures</a></h2>
+									<h2 class="title"><a href="portfolio-details-3.html">Monthly Meeting</a></h2>
 								</div>
 							</div>
 						</li>
-						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All cactus-corner fern-fantasy">
+						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All fern-fantasy small-plants">
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="javascript:void(0);">
-										<img src="image/_MG_3244 (1).jpg" alt="/">
+										<img src="image/image gallery/_MG_2757.JPG" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
 										<a href="javascript:void(0);">
-											<span class="badge">Plant</span>
+											<span class="badge">Factory</span>
 										</a>
 									</div>
-									<h2 class="title"><a href="portfolio-details-4.html">Botanical Beauties: Nature's Gifts</a></h2>
+									<h2 class="title"><a href="portfolio-details-2.html">Factory Outlook</a></h2>
 								</div>
 							</div>
 						</li>
@@ -554,16 +538,118 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="javascript:void(0);">
-										<img src="image/_MG_3244 (1).jpg" alt="/">
+										<img src="image/image gallery/_MG_2863.JPG" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
 										<a href="javascript:void(0);">
-											<span class="badge">Plant</span>
+											<span class="badge">Factory</span>
 										</a>
 									</div>
-									<h2 class="title"><a href="portfolio-details-5.html">Leafy Realm: Nature's Diversity</a></h2>
+									<h2 class="title"><a href="portfolio-details-5.html">Factory Inside Look</a></h2>
+								</div>
+							</div>
+						</li>
+						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All cactus-corner fern-fantasy">
+							<div class="portfolio-box style-1">
+								<div class="dz-media">
+									<a href="javascript:void(0);">
+										<img src="image/image gallery/_MG_2998.JPG" alt="/">
+									</a>
+								</div>
+								<div class="dz-content">
+									<div class="product-tag">
+										<a href="javascript:void(0);">
+											<span class="badge">Eqipment</span>
+										</a>
+									</div>
+									<h2 class="title"><a href="portfolio-details-4.html">Factory Equipment</a></h2>
+								</div>
+							</div>
+						</li>
+						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All plant-paradise small-plants">
+							<div class="portfolio-box style-1">
+								<a href="javascript:void(0);">
+									<div class="dz-media">
+										<img src="image/image gallery/_MG_2783.JPG" alt="/">
+									</div>
+								</a>
+								<div class="dz-content">
+									<div class="product-tag">
+										<a href="javascript:void(0);">
+											<span class="badge">Factory</span>
+										</a>
+									</div>
+									<h2 class="title"><a href="javascript:void(0);">Factory Outlook</a></h2>
+								</div>
+							</div>
+						</li>
+						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All house-plants plant-paradise small-plants">
+							<div class="portfolio-box style-1">
+								<div class="dz-media">
+									<a href="javascript:void(0);">
+										<img src="image/image gallery/_MG_2961.JPG" alt="/">
+									</a>
+								</div>
+								<div class="dz-content">
+									<div class="product-tag">
+										<a href="javascript:void(0);">
+											<span class="badge">Equipment</span>
+										</a>
+									</div>
+									<h2 class="title"><a href="javascript:void(0);">Factory Equipment</a></h2>
+								</div>
+							</div>
+						</li>
+						<li class="card-container col-xl-6 col-lg-6 col-md-6 col-sm-6 m-b30 All fern-fantasy small-plants">
+							<div class="portfolio-box style-1">
+								<div class="dz-media">
+									<a href="javascript:void(0);">
+										<img src="image/image gallery/_MG_2812.JPG" alt="/">
+									</a>
+								</div>
+								<div class="dz-content">
+									<div class="product-tag">
+										<a href="javascript:void(0);">
+											<span class="badge">Meeting</span>
+										</a>
+									</div>
+									<h2 class="title"><a href="portfolio-details-3.html">Monthly Meeting</a></h2>
+								</div>
+							</div>
+						</li>
+						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All cactus-corner">
+							<div class="portfolio-box style-1">
+								<div class="dz-media">
+									<a href="javascript:void(0);">
+										<img src="image/image gallery/_MG_3244.JPG" alt="/">
+									</a>
+								</div>
+								<div class="dz-content">
+									<div class="product-tag">
+										<a href="javascript:void(0);">
+											<span class="badge">Lab</span>
+										</a>
+									</div>
+									<h2 class="title"><a href="portfolio-details-4.html">Inside Biocell lab</a></h2>
+								</div>
+							</div>
+						</li>
+						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All plant-paradise">
+							<div class="portfolio-box style-1">
+								<div class="dz-media">
+									<a href="javascript:void(0);">
+										<img src="image/image gallery/_MG_3050.JPG" alt="/">
+									</a>
+								</div>
+								<div class="dz-content">
+									<div class="product-tag">
+										<a href="javascript:void(0);">
+											<span class="badge">Factory</span>
+										</a>
+									</div>
+									<h2 class="title"><a href="portfolio-details-5.html">Factory Visit</a></h2>
 								</div>
 							</div>
 						</li>
