--- a/Biocell/our-team.html
+++ b/Biocell/our-team.html
@@ -140,7 +140,7 @@
 						<ul class="sub-menu">
 							<li><a href="about-us.html">About Us</a></li>
 							<li><a href="our-team.html">Biocell Team</a></li>
-							                      <li><a href="why-choose-us.html">Why Choose Us</a></li>
+							<li><a href="why-choose-us.html">Why Choose Us</a></li>
 							<li><a href="credentials.html">Credentials</a></li>
 						</ul>
 						</li>
@@ -295,9 +295,11 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 	
 	<div class="page-content">
 		<!--Banner Start-->
-		<div class="dz-bnr-inr" style="background-image:url(image/breadcrumb-banner.jpg);">
+		<!--banner-->
+		<div class="dz-bnr-inr bg-secondary  dz-bnr-inr-sm" style="background-image:url(image/lab/lab\ \(24\).jpg);">
 			<div class="container">
 				<div class="dz-bnr-inr-entry">
+					<h1>Our Team</h1>
 					<nav aria-label="breadcrumb" class="breadcrumb-row">
 						<ul class="breadcrumb">
 							<li class="breadcrumb-item"><a href="index.html"> Home</a></li>
@@ -305,7 +307,7 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 						</ul>
 					</nav>
 				</div>
-			</div>	
+			</div>
 		</div>
 		<!--Banner End-->
 		
@@ -314,8 +316,8 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 				<div class="row g-3 g-xl-4">
 					<div class="col-xl-6 col-lg-8 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.1s">
 						<div class="section-head our-team">
-							<h2 class="title">Meet our team of creators, designers, and world-class problem solvers</h2>
-							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words.</p>
+							<h2 class="title">Meet Our Team of Researchers, Pharmacists, Management and Executives.</h2>
+							<p>At Biocell, we pride ourselves on having a team of dedicated professionals who are passionate about herbal medicine and holistic health. Our team is composed of experts from various medical disciplines, each bringing in their unique skills and expertise to the whole team. With a blend of traditional knowledge and modern scientific research, our team is committed to pioneering innovative herbal treatments that promote overall well-being.</p>
 							<a class="btn btn-secondary me-3 white-btn" href="shop-registration.html">Join Our Team</a>
 						</div>
 					</div>
