--- a/Biocell/about-us.html
+++ b/Biocell/about-us.html
@@ -69,7 +69,7 @@
 				<div class="dz-topbar-inner d-flex justify-content-between align-items-center">
 				<div class="dz-topbar-left">
 					<ul>
-						<li><a href="#">Helpline : +880 123 456 7890</a></li>
+						<li><a href="#">Helpline : +880 187 940 1510</a></li>
 					</ul>
 				</div>
 				<div class="dz-topbar-right">
@@ -631,159 +631,83 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 
 
 
-	<!-- testimonial / review start -->
-	<section class=" about-style4 content-inner overflow-hidden">
-		<div class="container">
-			<div class="row  align-items-center ">
-				<div class="col-lg-5 order-lg-1 order-2 wow fadeInUp" data-wow-delay="0.2s">
-				<div class="side-content">
-					<div class="about-thumb">
-						<img src="image/review.jpg" alt="">
+      <!-- testimonial / review start -->
+      <section class=" about-style4 content-inner overflow-hidden">
+			<div class="container">
+			  <div class="row  align-items-center ">
+				 <div class="col-lg-5 order-lg-1 order-2 wow fadeInUp" data-wow-delay="0.2s">
+					<div class="side-content">
+					  <div class="about-thumb review-img">
+						 <img src="image/_MG_2792.jpg" alt="">
+					  </div>
 					</div>
-				</div>
-				</div>
-				<div class="col-lg-7 m-b30 aos-item wow fadeInUp  order-lg-2 order-1 " data-wow-delay="0.4s">
-				<div class="right-contant">
-					<div class="section-head style-3">
-						<h2 class="title">What Our Customers Say <br> about us ?</h2>
-					</div>
-					<div class="swiper swiper-five ">
-						<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<div class="about-content">
-								<p class="para-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
-								<div class="about-bx-detail">
-								<div class="about-bx-pic radius">
-									<img src="image/pic2.png" alt="">
-								</div>
-								<div>
-									<h3 class="name">Kenneth Fong</h3> 
-									<span class="position">Postgraduate Student</span> 
-								</div>
-								</div>
+				 </div>
+				 <div class="col-lg-7 m-b30 aos-item wow fadeInUp  order-lg-2 order-1 " data-wow-delay="0.4s">
+					<div class="right-contant">
+					  <div class="section-head style-3">
+						 <h2 class="title">What Our Customers Say <br> about us ?</h2>
+					  </div>
+					  <div class="swiper swiper-five ">
+						 <div class="swiper-wrapper">
+							<div class="swiper-slide">
+							  <div class="about-content">
+								 <p class="para-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
+								 <div class="about-bx-detail">
+									<div class="about-bx-pic radius">
+									  <img src="image/pic2.png" alt="">
+									</div>
+									<div>
+									  <h3 class="name">Kenneth Fong</h3> 
+									  <span class="position">Postgraduate Student</span> 
+									</div>
+								 </div>
+							  </div>
 							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="about-content">
-								<p class="para-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
-								<div class="about-bx-detail">
-								<div class="about-bx-pic radius">
-									<img src="image/9.jfif" alt="">
-								</div>
-								<div>
-									<h6 class="name">Joe Do</h6> 
-									<span class="position">Undergraduate Student</span> 
-								</div>
-								</div>
+							<div class="swiper-slide">
+							  <div class="about-content">
+								 <p class="para-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
+								 <div class="about-bx-detail">
+									<div class="about-bx-pic radius">
+									  <img src="image/9.jfif" alt="">
+									</div>
+									<div>
+									  <h6 class="name">Joe Do</h6> 
+									  <span class="position">Undergraduate Student</span> 
+									</div>
+								 </div>
+							  </div>
 							</div>
-						</div>
-						</div>
-						<div class="pagination-align">
-						<div class="about-button-prev btn-prev">
-							<i class="flaticon flaticon-left-chevron"></i>
-						</div>
-						<div class="about-button-next btn-next">
-							<i class="flaticon flaticon-chevron"></i>
-						</div>
-						</div>
+						 </div>
+						 <div class="pagination-align">
+							<div class="about-button-prev btn-prev">
+							  <i class="flaticon flaticon-left-chevron"></i>
+							</div>
+							<div class="about-button-next btn-next">
+							  <i class="flaticon flaticon-chevron"></i>
+							</div>
+						 </div>
+					  </div>
 					</div>
-				</div>
-				</div>
+				 </div>
+			  </div>
 			</div>
-		</div>
-		<img src="images/about/Plant-1.png" alt="" class="Plant">
-
-		
-		<div class="right-text-bar">
-			<ul>
-				<li><img src="image/pic2.png" alt="" /></li>
-				<li><img src="image/1 (1).png" alt="" /></li>
-			</ul>
-		</div>
-		<div class="left-side-image">
-			<ul>
-				<li><img src="image/9.jfif" alt="" /></li>
-				<li><img src="image/10.jfif" alt="" /></li>
-			</ul>
-		</div>
-
-		</section>
-		<!-- review end -->
-
-		
-		<!-- Companies -->
-			<section class="content-inner-1 companies bg-white">
-				<div class="container">
-					<div class="section-head style-3 d-block wow fadeInUp text-center" data-wow-delay="0.2s">
-						<div class="max-w600 mx-auto">
-							<h2 class="title mb-4">We’re just keep growing with 6.3k trusted companies</h2>
-						</div>	
-					</div>
-					<div class="section-inner">
-						<div class="swiper swiper-company ">
-							<div class="swiper-wrapper">
-								<div class="swiper-slide wow fadeInUp" data-wow-delay="0.1s">
-									<a href="javascript:void(0);" class="companies-wrapper">
-										<div class="companies-media">
-											<img src="images/companies/logo1.png" alt=""> 
-										</div>
-									</a>
-								</div>
-								<div class="swiper-slide wow fadeInUp" data-wow-delay="0.2s">
-									<a href="javascript:void(0);" class="companies-wrapper">
-										<div class="companies-media">
-											<img src="images/companies/logo2.png" alt=""> 
-										</div>
-									</a>
-								</div>
-								<div class="swiper-slide wow fadeInUp" data-wow-delay="0.3s">
-									<a href="javascript:void(0);" class="companies-wrapper">
-										<div class="companies-media">
-											<img src="images/companies/logo3.png" alt=""> 
-										</div>
-									</a>
-								</div>
-								<div class="swiper-slide wow fadeInUp" data-wow-delay="0.4s">
-									<a href="javascript:void(0);" class="companies-wrapper">
-										<div class="companies-media">
-											<img src="images/companies/logo4.png" alt=""> 
-										</div>
-									</a>
-								</div>
-								<div class="swiper-slide wow fadeInUp" data-wow-delay="0.5s">
-									<a href="javascript:void(0);" class="companies-wrapper">
-										<div class="companies-media">
-											<img src="images/companies/logo5.png" alt=""> 
-										</div>
-									</a>
-								</div>
-								<div class="swiper-slide wow fadeInUp" data-wow-delay="0.6s">
-									<a href="javascript:void(0);" class="companies-wrapper">
-										<div class="companies-media">
-											<img src="images/companies/logo6.png" alt=""> 
-										</div>
-									</a>
-								</div>
-								<div class="swiper-slide wow fadeInUp" data-wow-delay="0.7s">
-									<a href="javascript:void(0);" class="companies-wrapper">
-										<div class="companies-media">
-											<img src="images/companies/logo1.png" alt=""> 
-										</div>
-									</a>
-								</div>
-								<div class="swiper-slide wow fadeInUp" data-wow-delay="0.8s">
-									<a href="javascript:void(0);" class="companies-wrapper">
-										<div class="companies-media">
-											<img src="images/companies/logo2.png" alt=""> 
-										</div>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-		<!-- Companies End -->
+ 
+			
+			<div class="right-text-bar">
+			  <ul>
+				 <li><img src="image/pic2.png" alt="" /></li>
+				 <li><img src="image/1 (1).png" alt="" /></li>
+			  </ul>
+			</div>
+			<div class="left-side-image">
+			  <ul>
+				 <li><img src="image/9.jfif" alt="" /></li>
+				 <li><img src="image/10.jfif" alt="" /></li>
+			  </ul>
+			</div>
+ 
+		 </section>
+		 <!-- review end -->
 
 	</div>
 	
