--- a/Biocell/contact-us.html
+++ b/Biocell/contact-us.html
@@ -69,7 +69,7 @@
 				<div class="dz-topbar-inner d-flex justify-content-between align-items-center">
 				<div class="dz-topbar-left">
 					<ul>
-						<li><a href="#">Helpline : +880 123 456 7890</a></li>
+						<li><a href="#">Helpline : +880 187 940 1510</a></li>
 					</ul>
 				</div>
 				<div class="dz-topbar-right">
@@ -296,10 +296,11 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 		<!-- Header End -->
 	
 	<div class="page-content">
-		<!--Banner Start-->
-		<div class="dz-bnr-inr" style="background-image:url(image/breadcrumb-banner.jpg);">
+		<!--banner-->
+		<div class="dz-bnr-inr bg-secondary  dz-bnr-inr-sm" style="background-image:url(image/lab/lab\ \(24\).jpg);">
 			<div class="container">
 				<div class="dz-bnr-inr-entry">
+					<h1>Contact Us</h1>
 					<nav aria-label="breadcrumb" class="breadcrumb-row">
 						<ul class="breadcrumb">
 							<li class="breadcrumb-item"><a href="index.html"> Home</a></li>
@@ -307,7 +308,7 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 						</ul>
 					</nav>
 				</div>
-			</div>	
+			</div>
 		</div>
 		<!--Banner End-->
 
@@ -382,11 +383,11 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 		</div>
 
 
-		<div class="content-inner bg-light">
+		<div class="content-inner bg-light" id="contact-form">
 			<div class="container">
 				<div class="row justify-content-between">
-					<div class="col-lg-5">
-						<img src="images/Plant-3.png" alt="">
+					<div class="col-lg-6 form-img">
+						<img src="image/_MG_2792.jpg" alt="">
 					</div>
 					<div class="col-lg-6">
 						<div class="contact-area  wow fadeInUp" data-wow-delay="0.5s">
@@ -438,7 +439,165 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 			</div>
 		</div>
 
-
+		<!-- Feature Box -->
+		<div class="content-inner py-0 image-wrapper">
+		<div class="container-fluid px-0">
+			<div class="row gx-0">
+				<div
+				class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
+				data-wow-delay="0.1s"
+			>
+				<div class="insta-post dz-media box-hover">
+				<img src="image/raw-material/raw-materials-05.png" alt="" />
+				<a
+					href="https://www.facebook.com/biocellay"
+					class="instagram-link"
+					target="_blank"
+				>
+					<div class="follow-link">
+						<div class="follow-link-icon">
+						<img src="image/fb-icon.png" alt="" />
+						</div>
+						<div class="follow-link-content">
+						<h6>Share with #Biocell</h6>
+						<p class="m-0">
+							Follow us to get updates.
+						</p>
+						</div>
+					</div>
+				</a>
+				</div>
+			</div>
+				<div
+				class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
+				data-wow-delay="0.1s"
+				>
+				<div class="insta-post dz-media box-hover">
+					<img src="image/image gallery/_MG_2998.JPG" alt="" />
+					<a
+						href="https://www.facebook.com/biocellay"
+						class="instagram-link"
+						target="_blank"
+					>
+						<div class="follow-link">
+						<div class="follow-link-icon">
+							<img src="image/fb-icon.png" alt="" />
+						</div>
+						<div class="follow-link-content">
+							<h6>Share with #Biocell</h6>
+							<p class="m-0">
+								Follow us to get updates.
+							</p>
+						</div>
+						</div>
+					</a>
+				</div>
+				</div>
+				<div
+				class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
+				data-wow-delay="0.1s"
+			>
+				<div class="insta-post dz-media box-hover">
+				<img src="image/image gallery/_MG_2783.JPG" alt="" />
+				<a
+					href="https://www.facebook.com/biocellay"
+					class="instagram-link"
+					target="_blank"
+				>
+					<div class="follow-link">
+						<div class="follow-link-icon">
+						<img src="image/fb-icon.png" alt="" />
+						</div>
+						<div class="follow-link-content">
+						<h6>Share with #Biocell</h6>
+						<p class="m-0">
+							Follow us to get updates.
+						</p>
+						</div>
+					</div>
+				</a>
+				</div>
+			</div>
+				<div
+				class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
+				data-wow-delay="0.1s"
+				>
+				<div class="insta-post dz-media box-hover">
+					<img src="image/image gallery/_MG_3219.JPG" alt="" />
+					<a
+						href="https://www.facebook.com/biocellay"
+						class="instagram-link"
+						target="_blank"
+					>
+						<div class="follow-link">
+						<div class="follow-link-icon">
+							<img src="image/fb-icon.png" alt="" />
+						</div>
+						<div class="follow-link-content">
+							<h6>Share with #Biocell</h6>
+							<p class="m-0">
+								Follow us to get updates.
+							</p>
+						</div>
+						</div>
+					</a>
+				</div>
+				</div>
+				<div
+				class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
+				data-wow-delay="0.1s"
+				>
+				<div class="insta-post dz-media box-hover">
+					<img src="image/image gallery/_MG_2833.JPG" alt="" />
+					<a
+						href="https://www.facebook.com/biocellay"
+						class="instagram-link"
+						target="_blank"
+					>
+						<div class="follow-link">
+						<div class="follow-link-icon">
+							<img src="image/fb-icon.png" alt="" />
+						</div>
+						<div class="follow-link-content">
+							<h6>Share with #Biocell</h6>
+							<p class="m-0">
+								Follow us to get updates.
+							</p>
+						</div>
+						</div>
+					</a>
+				</div>
+				</div>
+				<div
+				class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
+				data-wow-delay="0.1s"
+				>
+				<div class="insta-post dz-media box-hover">
+					<img src="image/image gallery/_MG_2731.JPG" alt="" />
+					<a
+						href="https://www.facebook.com/biocellay"
+						class="instagram-link"
+						target="_blank"
+					>
+						<div class="follow-link">
+						<div class="follow-link-icon">
+							<img src="image/fb-icon.png" alt="" />
+						</div>
+						<div class="follow-link-content">
+							<h6>Share with #Biocell</h6>
+							<p class="m-0">
+								Follow us to get updates.
+							</p>
+						</div>
+						</div>
+					</a>
+				</div>
+				</div>
+			</div>
+		</div>
+		</div>
+		<!-- Feature Box End -->
+		
 	</div>
 	
 	<!-- Footer -->
