--- a/Biocell/news-and-blogs.html
+++ b/Biocell/news-and-blogs.html
@@ -68,7 +68,7 @@
 				<div class="dz-topbar-inner d-flex justify-content-between align-items-center">
 				<div class="dz-topbar-left">
 					<ul>
-						<li><a href="#">Helpline : +880 123 456 7890</a></li>
+						<li><a href="#">Helpline : +880 187 940 1510</a></li>
 					</ul>
 				</div>
 				<div class="dz-topbar-right">
@@ -395,7 +395,7 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 						</div>
 					</div>
 					<div class="col-12 text-center mt-sm-4 mt-2 wow fadeInUp" data-wow-delay="0.5s">
-						<a href="blog-dark-2-column.html" class="btn btn-secondary white-btn">
+						<a href="#" class="btn btn-secondary white-btn">
 							Load More
 						</a>
 					</div>
@@ -419,6 +419,165 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 		</section>
 	
 	</div>
+
+	<!-- Feature Box -->
+	<div class="content-inner py-0 image-wrapper">
+	<div class="container-fluid px-0">
+		<div class="row gx-0">
+			<div
+			class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
+			data-wow-delay="0.1s"
+		>
+			<div class="insta-post dz-media box-hover">
+			<img src="image/raw-material/raw-materials-05.png" alt="" />
+			<a
+				href="https://www.facebook.com/biocellay"
+				class="instagram-link"
+				target="_blank"
+			>
+				<div class="follow-link">
+					<div class="follow-link-icon">
+					<img src="image/fb-icon.png" alt="" />
+					</div>
+					<div class="follow-link-content">
+					<h6>Share with #Biocell</h6>
+					<p class="m-0">
+						Follow us to get updates.
+					</p>
+					</div>
+				</div>
+			</a>
+			</div>
+		</div>
+			<div
+			class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
+			data-wow-delay="0.1s"
+			>
+			<div class="insta-post dz-media box-hover">
+				<img src="image/image gallery/_MG_2998.JPG" alt="" />
+				<a
+					href="https://www.facebook.com/biocellay"
+					class="instagram-link"
+					target="_blank"
+				>
+					<div class="follow-link">
+					<div class="follow-link-icon">
+						<img src="image/fb-icon.png" alt="" />
+					</div>
+					<div class="follow-link-content">
+						<h6>Share with #Biocell</h6>
+						<p class="m-0">
+							Follow us to get updates.
+						</p>
+					</div>
+					</div>
+				</a>
+			</div>
+			</div>
+			<div
+			class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
+			data-wow-delay="0.1s"
+		>
+			<div class="insta-post dz-media box-hover">
+			<img src="image/image gallery/_MG_2783.JPG" alt="" />
+			<a
+				href="https://www.facebook.com/biocellay"
+				class="instagram-link"
+				target="_blank"
+			>
+				<div class="follow-link">
+					<div class="follow-link-icon">
+					<img src="image/fb-icon.png" alt="" />
+					</div>
+					<div class="follow-link-content">
+					<h6>Share with #Biocell</h6>
+					<p class="m-0">
+						Follow us to get updates.
+					</p>
+					</div>
+				</div>
+			</a>
+			</div>
+		</div>
+			<div
+			class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
+			data-wow-delay="0.1s"
+			>
+			<div class="insta-post dz-media box-hover">
+				<img src="image/image gallery/_MG_3219.JPG" alt="" />
+				<a
+					href="https://www.facebook.com/biocellay"
+					class="instagram-link"
+					target="_blank"
+				>
+					<div class="follow-link">
+					<div class="follow-link-icon">
+						<img src="image/fb-icon.png" alt="" />
+					</div>
+					<div class="follow-link-content">
+						<h6>Share with #Biocell</h6>
+						<p class="m-0">
+							Follow us to get updates.
+						</p>
+					</div>
+					</div>
+				</a>
+			</div>
+			</div>
+			<div
+			class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
+			data-wow-delay="0.1s"
+			>
+			<div class="insta-post dz-media box-hover">
+				<img src="image/image gallery/_MG_2833.JPG" alt="" />
+				<a
+					href="https://www.facebook.com/biocellay"
+					class="instagram-link"
+					target="_blank"
+				>
+					<div class="follow-link">
+					<div class="follow-link-icon">
+						<img src="image/fb-icon.png" alt="" />
+					</div>
+					<div class="follow-link-content">
+						<h6>Share with #Biocell</h6>
+						<p class="m-0">
+							Follow us to get updates.
+						</p>
+					</div>
+					</div>
+				</a>
+			</div>
+			</div>
+			<div
+			class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
+			data-wow-delay="0.1s"
+			>
+			<div class="insta-post dz-media box-hover">
+				<img src="image/image gallery/_MG_2731.JPG" alt="" />
+				<a
+					href="https://www.facebook.com/biocellay"
+					class="instagram-link"
+					target="_blank"
+				>
+					<div class="follow-link">
+					<div class="follow-link-icon">
+						<img src="image/fb-icon.png" alt="" />
+					</div>
+					<div class="follow-link-content">
+						<h6>Share with #Biocell</h6>
+						<p class="m-0">
+							Follow us to get updates.
+						</p>
+					</div>
+					</div>
+				</a>
+			</div>
+			</div>
+		</div>
+	</div>
+	</div>
+	<!-- Feature Box End -->
 	
 	<!-- Footer -->
 	<footer class="site-footer style-1">
