--- a/Biocell/quality-assurance.html
+++ b/Biocell/quality-assurance.html
@@ -69,7 +69,7 @@
 				<div class="dz-topbar-inner d-flex justify-content-between align-items-center">
 				<div class="dz-topbar-left">
 					<ul>
-						<li><a href="#">Helpline : +880 123 456 7890</a></li>
+						<li><a href="#">Helpline : +880 187 940 1510</a></li>
 					</ul>
 				</div>
 				<div class="dz-topbar-right">
@@ -300,11 +300,11 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 		<div class="dz-bnr-inr bg-secondary  dz-bnr-inr-sm" style="background-image:url(image/lab/lab\ \(24\).jpg);">
 			<div class="container">
 				<div class="dz-bnr-inr-entry">
-					<h1>Medicine Production</h1>
+					<h1>Quality Assurance</h1>
 					<nav aria-label="breadcrumb" class="breadcrumb-row">
 						<ul class="breadcrumb">
 							<li class="breadcrumb-item"><a href="index.html">Home</a></li>
-							<li class="breadcrumb-item">Medicine Production</li>
+							<li class="breadcrumb-item">Quality Assurance</li>
 						</ul>
 					</nav>
 				</div>
