--- a/Biocell/index.html
+++ b/Biocell/index.html
@@ -146,7 +146,7 @@
             <div class="dz-topbar-inner d-flex justify-content-between align-items-center">
               <div class="dz-topbar-left">
                 <ul>
-                  <li><a href="#">Helpline : +880 123 456 7890</a></li>
+                  <li><a href="#">Helpline : +880 187 940 1510</a></li>
                 </ul>
               </div>
               <div class="dz-topbar-right">
@@ -167,7 +167,7 @@
               <!-- Website Logo -->
               <div class="logo-header logo-dark me-md-5">
                 <a href="index.html"
-                  ><img src="image/biocell-name.jpg" alt="logo"
+                  ><img src="image/biocell-logo-name-by-side.png" alt="logo"
                 /></a>
               </div>
 
@@ -401,21 +401,25 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 
                   <a
                     class="btn btn-outline-secondary m-b30 btn-lg white-btn"
-                    href="about-us.html"
+                    href="product-page.html"
                     >Our Products</a
                   >
                 </div>
                 <div class="bottom-contant">
+                  <a href="#">
                   <div class="Plant-2">
                     <div class="dz-media">
                       <img src="image/4.jfif" alt="image" />
                     </div>
                   </div>
+                  </a>
+                  <a href="#">
                   <div class="Plant-2">
                     <div class="dz-media">
                       <img src="image/3.jfif" alt="image" />
                     </div>
                   </div>
+                  </a>
                 </div>
               </div>
               <div class="col-xl-6 col-md-8 col-sm-12 order-3 order-xl-2">
@@ -585,16 +589,20 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
                     </li>
                   </ul>
                   <div class="bottom-contant">
+                    <a href="#">
                     <div class="Plant-2">
                       <div class="dz-media">
-                        <img src="image/1.jfif" alt="image" />
+                         <img src="image/1.jfif" alt="image" />
                       </div>
                     </div>
+                    </a>
+                    <a href="#">
                     <div class="Plant-2">
                       <div class="dz-media">
                         <img src="image/2.jfif" alt="image" />
                       </div>
                     </div>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -800,7 +808,7 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
                   >
                     <a
                       class="btn btn-outline-secondary m-b30 btn-lg white-btn
-                      href="about-us.html"
+                      href="contact-us.html"
                       >Apply for Free Medicine</a
                     >
                     <a
@@ -809,7 +817,7 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
                     >
                       <div class="text-row word-rotate-box c-black">
                         <span class="word-rotate"
-                          >All Products - All Products -</span
+                          >All Products - All Products - </span
                         >
                         <svg
                           class="badge__emoji"
@@ -863,16 +871,14 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
                 <h2>Our Mission</h2>
                 <img src="image/mission.jfif" alt="">
               </div>
-              <h5>Lorem Ipsum is simply dummy text of the
-                printing and typesetting industry.</h5>
+              <h5>To enhance well-being through pure and innovative natural herbal remedies.</h5>
             </div>
             <div class="vision">
               <div class="heading">
                 <h2>Our Vision</h2>
                 <img src="image/vision.jfif" alt="">
               </div>
-              <h5>Lorem Ipsum is simply dummy text of the
-                printing and typesetting industry.</h5>
+              <h5>To be the global leader in safe, effective herbal medicine, promoting a healthier world.</h5>
             </div>
           </div>
 
@@ -888,22 +894,22 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
             </div>
             <div class="boxes">
               <div class="box">
-                <div><img src="image/16.jfif" alt=""></div>
+                <div><i class="fa-solid fa-pills"></i></div>
                 <h3 class="number">40+</h3>
                 <h4>Medicines</h4>
               </div>
               <div class="box">
-                <div><img src="image/16.jfif" alt=""></div>
+                <div><i class="fa-solid fa-house-chimney-medical"></i></div>
                 <h3 class="number">1500+</h3>
                 <h4>Pharmacies</h4>
               </div>
               <div class="box">
-                <div><img src="image/16.jfif" alt=""></div>
+                <div><i class="fa-solid fa-map-location-dot"></i></div>
                 <h3 class="number">45+</h3>
                 <h4>Districts</h4>
               </div>
               <div class="box">
-                <div><img src="image/16.jfif" alt=""></div>
+                <div><i class="fa-solid fa-bed"></i></div>
                 <h3 class="number">230k+</h3>
                 <h4>Patients</h4>
               </div>
@@ -1670,8 +1676,8 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
           <div class="row  align-items-center ">
             <div class="col-lg-5 order-lg-1 order-2 wow fadeInUp" data-wow-delay="0.2s">
               <div class="side-content">
-                <div class="about-thumb">
-                  <img src="image/review.jpg" alt="">
+                <div class="about-thumb review-img">
+                  <img src="image/_MG_2792.jpg" alt="">
                 </div>
               </div>
             </div>
@@ -1724,7 +1730,6 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
             </div>
           </div>
         </div>
-        <img src="images/about/Plant-1.png" alt="" class="Plant">
 
         
         <div class="right-text-bar">
@@ -2106,24 +2111,99 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
           <div class="container-fluid px-0">
             <div class="row gx-0">
               <div
+              class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
+              data-wow-delay="0.1s"
+            >
+              <div class="insta-post dz-media box-hover">
+                <img src="image/raw-material/raw-materials-05.png" alt="" />
+                <a
+                  href="https://www.facebook.com/biocellay"
+                  class="instagram-link"
+                  target="_blank"
+                >
+                  <div class="follow-link">
+                    <div class="follow-link-icon">
+                      <img src="image/fb-icon.png" alt="" />
+                    </div>
+                    <div class="follow-link-content">
+                      <h6>Share with #Biocell</h6>
+                      <p class="m-0">
+                        Follow us to get updates.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+              <div
                 class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
                 data-wow-delay="0.1s"
               >
                 <div class="insta-post dz-media box-hover">
-                  <img src="image/21.jpg" alt="" />
+                  <img src="image/image gallery/_MG_2998.JPG" alt="" />
                   <a
-                    href="https://www.instagram.com/dexignzone/"
+                    href="https://www.facebook.com/biocellay"
                     class="instagram-link"
                     target="_blank"
                   >
                     <div class="follow-link">
                       <div class="follow-link-icon">
-                        <img src="images/insta-follow.png" alt="" />
+                        <img src="image/fb-icon.png" alt="" />
                       </div>
                       <div class="follow-link-content">
                         <h6>Share with #Biocell</h6>
                         <p class="m-0">
-                          Follow <span>@biocell </span>for inspiration.
+                          Follow us to get updates.
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div
+              class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
+              data-wow-delay="0.1s"
+            >
+              <div class="insta-post dz-media box-hover">
+                <img src="image/image gallery/_MG_2783.JPG" alt="" />
+                <a
+                  href="https://www.facebook.com/biocellay"
+                  class="instagram-link"
+                  target="_blank"
+                >
+                  <div class="follow-link">
+                    <div class="follow-link-icon">
+                      <img src="image/fb-icon.png" alt="" />
+                    </div>
+                    <div class="follow-link-content">
+                      <h6>Share with #Biocell</h6>
+                      <p class="m-0">
+                        Follow us to get updates.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+              <div
+                class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
+                data-wow-delay="0.1s"
+              >
+                <div class="insta-post dz-media box-hover">
+                  <img src="image/image gallery/_MG_3219.JPG" alt="" />
+                  <a
+                    href="https://www.facebook.com/biocellay"
+                    class="instagram-link"
+                    target="_blank"
+                  >
+                    <div class="follow-link">
+                      <div class="follow-link-icon">
+                        <img src="image/fb-icon.png" alt="" />
+                      </div>
+                      <div class="follow-link-content">
+                        <h6>Share with #Biocell</h6>
+                        <p class="m-0">
+                          Follow us to get updates.
                         </p>
                       </div>
                     </div>
@@ -2132,23 +2212,23 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
               </div>
               <div
                 class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
-                data-wow-delay="0.2s"
+                data-wow-delay="0.1s"
               >
                 <div class="insta-post dz-media box-hover">
-                  <img src="image/1 (1).png" alt="" />
+                  <img src="image/image gallery/_MG_2833.JPG" alt="" />
                   <a
-                    href="https://www.instagram.com/dexignzone/"
+                    href="https://www.facebook.com/biocellay"
                     class="instagram-link"
                     target="_blank"
                   >
                     <div class="follow-link">
                       <div class="follow-link-icon">
-                        <img src="image/pic2.png" alt="" />
+                        <img src="image/fb-icon.png" alt="" />
                       </div>
                       <div class="follow-link-content">
                         <h6>Share with #Biocell</h6>
                         <p class="m-0">
-                          Follow <span>@biocell </span>for inspiration.
+                          Follow us to get updates.
                         </p>
                       </div>
                     </div>
@@ -2157,98 +2237,23 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
               </div>
               <div
                 class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
-                data-wow-delay="0.3s"
+                data-wow-delay="0.1s"
               >
                 <div class="insta-post dz-media box-hover">
-                  <img src="image/21.jpg" alt="" />
+                  <img src="image/image gallery/_MG_2731.JPG" alt="" />
                   <a
-                    href="https://www.instagram.com/dexignzone/"
+                    href="https://www.facebook.com/biocellay"
                     class="instagram-link"
                     target="_blank"
                   >
                     <div class="follow-link">
                       <div class="follow-link-icon">
-                        <img src="images/insta-follow.png" alt="" />
+                        <img src="image/fb-icon.png" alt="" />
                       </div>
                       <div class="follow-link-content">
                         <h6>Share with #Biocell</h6>
                         <p class="m-0">
-                          Follow <span>@biocell </span>for inspiration.
-                        </p>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </div>
-              <div
-                class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
-                data-wow-delay="0.4s"
-              >
-                <div class="insta-post dz-media box-hover">
-                  <img src="image/10.jfif" alt="" />
-                  <a
-                    href="https://www.instagram.com/dexignzone/"
-                    class="instagram-link"
-                    target="_blank"
-                  >
-                    <div class="follow-link">
-                      <div class="follow-link-icon">
-                        <img src="images/insta-follow.png" alt="" />
-                      </div>
-                      <div class="follow-link-content">
-                        <h6>Share with #Biocell</h6>
-                        <p class="m-0">
-                          Follow <span>@biocell </span>for inspiration.
-                        </p>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </div>
-              <div
-                class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
-                data-wow-delay="0.5s"
-              >
-                <div class="insta-post dz-media box-hover">
-                  <img src="image/22.jpg" alt="" />
-                  <a
-                    href="https://www.instagram.com/dexignzone/"
-                    class="instagram-link"
-                    target="_blank"
-                  >
-                    <div class="follow-link">
-                      <div class="follow-link-icon">
-                        <img src="images/insta-follow.png" alt="" />
-                      </div>
-                      <div class="follow-link-content">
-                        <h6>Share with #Biocell</h6>
-                        <p class="m-0">
-                          Follow <span>@biocell </span>for inspiration.
-                        </p>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </div>
-              <div
-                class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4 wow fadeIn"
-                data-wow-delay="0.6s"
-              >
-                <div class="insta-post dz-media box-hover">
-                  <img src="image/20.jpg" alt="" />
-                  <a
-                    href="https://www.instagram.com/dexignzone/"
-                    class="instagram-link"
-                    target="_blank"
-                  >
-                    <div class="follow-link">
-                      <div class="follow-link-icon">
-                        <img src="images/insta-follow.png" alt="" />
-                      </div>
-                      <div class="follow-link-content">
-                        <h6>Share with #Biocell</h6>
-                        <p class="m-0">
-                          Follow <span>@biocell </span>for inspiration.
+                          Follow us to get updates.
                         </p>
                       </div>
                     </div>
