breadcrumb , banner updated

--- a/Biocell/channel-partner.html
+++ b/Biocell/channel-partner.html
@@ -374,10 +374,9 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 
       <div class="page-content">
 		<!--banner-->
-		<div class="dz-bnr-inr bg-secondary dz-bnr-inr-lg ch-partner-banner" style="background-image:url(images-biocell/_MG_2779.JPG);">
+		<div class="dz-bnr-inr" style="background-image:url(image/breadcrumb-banner.jpg);">
 			<div class="container">
-				<div class="dz-bnr-inr-entry d-table-cell">
-					<h1>Channel Partner</h1>
+				<div class="dz-bnr-inr-entry">
 					<nav aria-label="breadcrumb" class="breadcrumb-row">
 						<ul class="breadcrumb">
 							<li class="breadcrumb-item"><a href="index.html"> Home</a></li>
@@ -385,7 +384,7 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 						</ul>
 					</nav>
 				</div>
-			</div>
+			</div>	
 		</div>
         <!-- Banner End-->
 
