--- a/Biocell/about-us.html
+++ b/Biocell/about-us.html
@@ -297,11 +297,9 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 	
 	<div class="page-content">
 		<!-- banner start -->
-		 		<!--banner-->
-		<div class="dz-bnr-inr bg-secondary  dz-bnr-inr-md" style="background-image:url(image/lab/lab\ \(24\).jpg);">
+		<div class="dz-bnr-inr" style="background-image:url(image/breadcrumb-banner.jpg);">
 			<div class="container">
-				<div class="dz-bnr-inr-entry d-table-cell">
-					<h1>About Us</h1>
+				<div class="dz-bnr-inr-entry">
 					<nav aria-label="breadcrumb" class="breadcrumb-row">
 						<ul class="breadcrumb">
 							<li class="breadcrumb-item"><a href="index.html"> Home</a></li>
@@ -309,99 +307,8 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 						</ul>
 					</nav>
 				</div>
-			</div>
+			</div>	
 		</div>
-<!-- 
-      <section class="content-inner overflow-hidden">
-			<div class="container">
-			  <div class="row align-items-center">
-				 <div class="col-lg-6 m-b30">
-					<div class="row g-xl-2 g-md-2 g-3">
-					  <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.6s">
-						 <div class="about-thumb">
-							<img src="images-biocell/_MG_3244.JPG" alt="" class="rounded"> 
-						 </div>
-					  </div>
-					  <div class="col-xl-4 col-lg-4 col-sm-4 col-4 wow fadeInUp" data-wow-delay="0.5s">
-						 <div class="about-thumb">
-							<img src="image/equipments/equipment01.png" alt="" class="rounded">
-						 </div>
-					  </div>
-					  <div class="col-xl-8 col-lg-8 col-sm-8 col-8 wow fadeInUp" data-wow-delay="0.4s">
-						 <div class="about-thumb">
-							<img src="images-biocell/_MG_3166.JPG" alt="" class="rounded">
-						 </div>
-					  </div>
-					</div>
-				 </div>	
-				 <div class="col-lg-6">
-					<div class="section-head wow fadeInUp m-md-r100" data-wow-delay="0.1s">
-					  <h2 class="title">Welcome to Biocell</h2>
-					  <p>At Biocell, we blend nature and science to create premium herbal medicines. Our mission is to provide high-quality, effective, and safe herbal remedies that support a healthy lifestyle. Founded with a passion for natural healing, we combine traditional knowledge with modern science to offer products that are both time-tested and innovative. Our team of experts, including herbalists and scientists, is dedicated to developing products you can trust.
-					  </p>	
-					</div>
-					<div class="row justify-content-center">
-					  <div class="col-lg-6 col-md-6 col-sm-6  m-b30">
-						 <div class="icon-bx-wraper style-5 partner">
-							<div class="icon-media"> 
-							  <i class="fa-solid fa-circle-check"></i>
-							</div>
-							<div class="icon-content">
-							  <h3 class="title">Connection To Nature</h3>
-							</div>
-						 </div>
-					  </div>
-					  <div class="col-lg-6 col-md-6 col-sm-6  m-b30">
-						 <div class="icon-bx-wraper style-5 partner">
-							<div class="icon-media"> 
-							  <i class="fa-solid fa-circle-check"></i>
-							</div>
-							<div class="icon-content">
-							  <h3 class="title">Avoid Side-effects</h3>
-							</div>
-						 </div>
-					  </div>
-					  <div class="col-lg-6 col-md-6  col-sm-6 m-b30">
-						 <div class="icon-bx-wraper style-5 partner">
-							<div class="icon-media"> 
-							  <i class="fa-solid fa-circle-check"></i>
-							</div>
-							<div class="icon-content">
-							  <h4 class="title">Health Friedly</h4>
-							</div>
-						 </div>
-					  </div>
-					  <div class="col-lg-6 col-md-6  col-sm-6 m-b30">
-						 <div class="icon-bx-wraper style-5 partner">
-							<div class="icon-media"> 
-							  <i class="fa-solid fa-circle-check"></i>
-							</div>
-							<div class="icon-content">
-							  <h4 class="title">Technology Driven</h4>
-							</div>
-						 </div>
-					  </div>
-					</div>
-					<a class="btn btn-outline-secondary btn-lg white-btn" href="contact-us.html">Drop a Message</a>
-				 </div>	
-			  </div>
-			</div>
-	
-				 
-		 <div class="right-text-bar">
-			<ul>
-			  <li><img src="image/pic2.png" alt="" /></li>
-			  <li><img src="image/1 (1).png" alt="" /></li>
-			</ul>
-		 </div>
-		 <div class="left-side-image">
-			<ul>
-			  <li><img src="image/9.jfif" alt="" /></li>
-			  <li><img src="image/10.jfif" alt="" /></li>
-			</ul>
-		 </div>
-	
-		 </section>	 -->
 
 		 <section class="content-inner-1 bg-img-fix bio-detail">
 			<div class="container">
