--- a/Biocell/contact-us.html
+++ b/Biocell/contact-us.html
@@ -297,10 +297,9 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 	
 	<div class="page-content">
 		<!--banner-->
-		<div class="dz-bnr-inr bg-secondary  dz-bnr-inr-sm" style="background-image:url(image/lab/lab\ \(24\).jpg);">
+		<div class="dz-bnr-inr" style="background-image:url(image/breadcrumb-banner.jpg);">
 			<div class="container">
 				<div class="dz-bnr-inr-entry">
-					<h1>Contact Us</h1>
 					<nav aria-label="breadcrumb" class="breadcrumb-row">
 						<ul class="breadcrumb">
 							<li class="breadcrumb-item"><a href="index.html"> Home</a></li>
@@ -308,7 +307,7 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 						</ul>
 					</nav>
 				</div>
-			</div>
+			</div>	
 		</div>
 		<!--Banner End-->
 
