--- a/Biocell/credentials.html
+++ b/Biocell/credentials.html
@@ -374,20 +374,19 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 
       <div class="page-content">
 
-         		<!--banner-->
-		<div class="dz-bnr-inr bg-secondary  dz-bnr-inr-md" style="background-image:url(image/lab/lab\ \(6\).jpg);">
-			<div class="container">
-				<div class="dz-bnr-inr-entry d-table-cell">
-					<h1>Certifications and Documents</h1>
-					<nav aria-label="breadcrumb" class="breadcrumb-row">
-						<ul class="breadcrumb">
-							<li class="breadcrumb-item"><a href="index.html"> Home</a></li>
-							<li class="breadcrumb-item">Credentials</li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</div>
+      <!--banner-->
+        <div class="dz-bnr-inr" style="background-image:url(image/breadcrumb-banner.jpg);">
+        <div class="container">
+          <div class="dz-bnr-inr-entry">
+            <nav aria-label="breadcrumb" class="breadcrumb-row">
+              <ul class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html"> Home</a></li>
+                <li class="breadcrumb-item">Credentials</li>
+              </ul>
+            </nav>
+          </div>
+        </div>	
+      </div>
 
       <div class="container account-card credentials">
          <div class="table-responsive download-table">
