--- a/Biocell/quality-assurance.html
+++ b/Biocell/quality-assurance.html
@@ -297,18 +297,17 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 	
 	<div class="page-content">
 		<!--banner-->
-		<div class="dz-bnr-inr bg-secondary  dz-bnr-inr-sm" style="background-image:url(image/lab/lab\ \(24\).jpg);">
+		<div class="dz-bnr-inr" style="background-image:url(image/breadcrumb-banner.jpg);">
 			<div class="container">
 				<div class="dz-bnr-inr-entry">
-					<h1>Quality Assurance</h1>
 					<nav aria-label="breadcrumb" class="breadcrumb-row">
 						<ul class="breadcrumb">
-							<li class="breadcrumb-item"><a href="index.html">Home</a></li>
+							<li class="breadcrumb-item"><a href="index.html"> Home</a></li>
 							<li class="breadcrumb-item">Quality Assurance</li>
 						</ul>
 					</nav>
 				</div>
-			</div>
+			</div>	
 		</div>
 
 		 <section class="bg-img-fix bio-detail">
