--- a/Biocell/video-gallery.html
+++ b/Biocell/video-gallery.html
@@ -295,10 +295,11 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 		<!-- Header End -->
 	
 	<div class="page-content">
-		<div class="dz-bnr-inr bg-secondary  dz-bnr-inr-sm" style="background-image:url(image/lab/lab\ \(24\).jpg);">
+
+		<!-- banner start -->
+		<div class="dz-bnr-inr" style="background-image:url(image/breadcrumb-banner.jpg);">
 			<div class="container">
 				<div class="dz-bnr-inr-entry">
-					<h1>Video Gallery</h1>
 					<nav aria-label="breadcrumb" class="breadcrumb-row">
 						<ul class="breadcrumb">
 							<li class="breadcrumb-item"><a href="index.html"> Home</a></li>
@@ -306,7 +307,7 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 						</ul>
 					</nav>
 				</div>
-			</div>
+			</div>	
 		</div>
 		<!--Banner End-->
 		
